# ess-dive-linkml-playground

./: .cruft.json  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  about.yaml  index.html  mkdocs.yml  project.Makefile  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yaml  main.yaml
Container/: index.html
MySchema/: index.html
NamedThing/: index.html
Observation/: index.html
Person/: index.html
PersonCollection/: index.html
PersonStatus/: index.html
about/: index.html
age_in_years/: index.html
basin3d_id/: index.html
birth_date/: index.html
categories/: index.html
description/: index.html
entries/: index.html
ess-dive-linkml-playground/: index.html
examples/: README.md  basin3d_variables_hydrology.tsv  basin3d_variables_hydrology.yaml
id/: index.html
name/: index.html
observation_list/: index.html
primary_email/: index.html
project/excel/: ess_dive_linkml_playground.xlsx
project/graphql/: ess_dive_linkml_playground.graphql
project/jsonld/: ess_dive_linkml_playground.context.jsonld  ess_dive_linkml_playground.jsonld
project/jsonschema/: ess_dive_linkml_playground.schema.json
project/owl/: ess_dive_linkml_playground.owl.ttl
project/prefixmap/: ess_dive_linkml_playground.yaml
project/protobuf/: ess_dive_linkml_playground.proto
project/shacl/: ess_dive_linkml_playground.shacl.ttl
project/shex/: ess_dive_linkml_playground.shex
search/: search_index.json
src/docs/: about.md
tests/: __init__.py  test_data.py
types/: index.html
units/: index.html
vital_status/: index.html
(+4 files in other folders)
